--- a/pd-ui/.babelrc
+++ b/pd-ui/.babelrc
@@ -7,6 +7,7 @@
         "style": true
       }
     ],
+    "@babel/plugin-proposal-class-properties",
     "react-hot-loader/babel"
   ],
   "presets": [
