--- a/pd-ui/package.json
+++ b/pd-ui/package.json
@@ -13,22 +13,31 @@
   "dependencies": {
     "@hot-loader/react-dom": "^16.13.0",
     "antd": "^4.2.0",
+    "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
+    "normalize.less": "^1.0.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-redux-loading-bar": "^4.6.0",
+    "react-router": "latest",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "react-router": "latest"
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
     "babel-plugin-import": "^1.13.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
+    "dotenv-webpack": "^1.7.0",
+    "history": "latest",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "less": "^3.11.1",
@@ -38,7 +47,6 @@
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^3.7.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
-    "history": "latest"
+    "webpack-dev-server": "^3.10.3"
   }
 }
