--- a/pd-ui/package.json
+++ b/pd-ui/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ant-design/icons": "^4.1.0",
     "@hot-loader/react-dom": "^16.13.0",
     "antd": "^4.2.0",
     "axios": "^0.19.2",
@@ -35,8 +36,10 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-import": "^1.13.0",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.5.3",
     "dotenv-webpack": "^1.7.0",
+    "favicons-webpack-plugin": "^3.0.1",
     "history": "latest",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
